tests/ui/self/arbitrary_self_types_needing_mut_pin.stderr
error[E0599]: no method named `x` found for struct `S` in the current scope
  --> $DIR/arbitrary_self_types_needing_mut_pin.rs:11:7
   |
LL | struct S;
   | -------- method `x` not found for this struct
...
LL |     S.x();
   |       ^ method not found in `S`
   |
help: consider pinning the expression
   |
LL ~     let mut pinned = std::pin::pin!(S);
LL ~     pinned.as_mut().x();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
